2007-04-29 TADA Tadashi <sho@spc.gr.jp>
	* skel/i.category.rb, plugin/00default.rb: category support mobile mode
	more.

2007-04-22 TADA Tadashi <sho@spc.gr.jp>
	* add skel/i.category.rb for category page on mobile mode.

2007-04-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: marge new text without subtitle into previous
	section.

2007-03-28 hajime miyauchi <hajime.miyauchi at gmail.com>
	* style/rd/rd_style.rb: section_enter/leave_proc into mobile mode.

2007-03-28 MIYASAKA Masaru <alkaid at coral.ocn.ne.jp>
	* 00default.rb: fix counting @prev_day and @next_day error in calc_links.

2007-03-11 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: 'h' replace to 'CGI::escapeHTML' in TDiaryTrackBackError.
	thanks to MIYASAKA Masaru.

2007-03-11 MIYASAKA Masaru <alkaid at coral.ocn.ne.jp>
	* tdiary.rb: CGI::request_uri support IIS and some other httpds.

2007-03-06 TADA Tadashi <sho@spc.gr.jp>
	* hikidoc.rb was moved from 'tdiary' to 'misc/lib'.

2007-02-27 TADA Tadashi <sho@spc.gr.jp>
	* theme/base.css: add more detail styles for amazon plugin.

2007-02-24 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/{ja,en,zh}/10spamfilter.rb: fix bug resolv_check_mode setting.

2007-02-22 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: add some spam and referer data.
	* filter/spam.rb: spam when referer has a fragment.
	* rename linkcheck.rb to spamlinkcheck.rb in filter.
	* plugin/10spamfilter.rb, filter/spamlinkcheck.rb: add options of
	TrackBack linkcheck.
	* plugin/00default.rb: add comment_form_mobile_mail_field method.

2007-02-20 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: raise error when TrackBack has been filtered.
	* add new filter linkcheck.rb.

2007-02-19 TADA Tadashi <sho@spc.gr.jp>
	* theme/base.css: add about edit-today plugin.

2007-02-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: move code of checking DefaultIO.

2007-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add remove_tag method into Plugin.

2007-02-07 TADA Tadashi <sho@spc.gr.jp>